Html_fix_location

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                         Segredo Desperto
                                     </h3>
                                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-                                    <a class="button-other" href="/Livros/Segredo_Desperto.html" >
+                                    <a class="button-other" href="Segredo_Desperto.html" >
                                         <div class="icon_cont">
                                         <p class="icon_plus">+</p>
                                         </div>
@@ -72,7 +72,7 @@
                                         A Gémea Rejeitada
                                     </h3>
                                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-                                    <a class="button-other" href="Livros/Gémea_Rejeitada.html">
+                                    <a class="button-other" href="Gémea_Rejeitada.html">
                                         <div class="icon_cont">
                                         <p class="icon_plus">+</p>
                                         </div>
@@ -90,7 +90,7 @@
                                         Conta-me a Verdade
                                     </h3>
                                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-                                    <a class="button-other" href="Livros/Conta-me_a_Verdade.html">
+                                    <a class="button-other" href="Conta-me_a_Verdade.html">
                                         <div class="icon_cont">
                                         <p class="icon_plus">+</p>
                                         </div>
