--- a/Segredo_Desperto.html
+++ b/Segredo_Desperto.html
@@ -210,7 +210,7 @@
                                                 A Gémea Rejeitada
                                             </h3>
                                             <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-                                            <a class="button-other" href="../Livros/Gémea_Rejeitada.html">
+                                            <a class="button-other" href="Gémea_Rejeitada.html">
                                                 <div class="icon_cont">
                                                 <p class="icon_plus">+</p>
                                                 </div>
@@ -228,7 +228,7 @@
                                                     Conta-me a Verdade
                                                 </h3>
                                                 <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-                                                <a class="button-other" href="../Livros/Conta-me_a_Verdade.html">
+                                                <a class="button-other" href="Conta-me_a_Verdade.html">
                                                     <div class="icon_cont">
                                                     <p class="icon_plus">+</p>
                                                     </div>
@@ -246,7 +246,7 @@
                                                         A Premonição do Rouxinol
                                                     </h3>
                                                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-                                                    <a class="button-other" href="../Livros/Promunição_do_Rouxinol.html">
+                                                    <a class="button-other" href="Promunição_do_Rouxinol.html">
                                                         <div class="icon_cont">
                                                         <p class="icon_plus">+</p>
                                                         </div>
@@ -384,10 +384,10 @@
 
 
 
-<script  src="../Components/transition.js"></script>
-<script   src="../Components/scroll.js"></script>
-<script   src="../Components/Buttons.js"></script>
-<script   src="../Components/line.js"></script>
-<script   src="../Components/textshow.js"></script>
+<script  src="Components/transition.js"></script>
+<script   src="Components/scroll.js"></script>
+<script   src="Components/Buttons.js"></script>
+<script   src="Components/line.js"></script>
+<script   src="Components/textshow.js"></script>
 
 </html>
