--- a/Segredo_Desperto.html
+++ b/Segredo_Desperto.html
@@ -76,12 +76,12 @@
                             <h1  class="headline-galery  animate-this" >Galeria</h1>
                            
                              <div class="contgallery">
-                               <img class ="img-booksshow"src="../images/Book_segredo_1.jpg" alt="">
-                               <img class ="img-booksshow"src="../images/pharmacy-3377670.jpg" alt="">
-                               <img class ="img-booksshow"src="../images/pharmacy-3377670.jpg" alt="">
-                               <img class ="img-booksshow"src="../images/pharmacy-3377670.jpg" alt="">
-                               <img class ="img-booksshow"src="../images/pharmacy-3377670.jpg" alt="">
-                               <img class ="img-booksshow"src="../images/pharmacy-3377670.jpg" alt="">
+                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
+                               <img class ="img-booksshow"src="images/pharmacy-3377670.jpg" alt="">
+                               <img class ="img-booksshow"src="images/pharmacy-3377670.jpg" alt="">
+                               <img class ="img-booksshow"src="images/pharmacy-3377670.jpg" alt="">
+                               <img class ="img-booksshow"src="images/pharmacy-3377670.jpg" alt="">
+                               <img class ="img-booksshow"src="images/pharmacy-3377670.jpg" alt="">
                              </div>
                         </div>
                            <h1  class="headline-sinopse"  id="sinopse" >Sinópse</h1>
@@ -138,7 +138,7 @@
                             </div>    
                                     
                             <div>
-                                <img class="img-aut" src="../images/sky-tree-2418287.jpg" alt="">
+                                <img class="img-aut" src="images/sky-tree-2418287.jpg" alt="">
                             </div>
 
                         </div>
@@ -341,24 +341,24 @@
                         <label class="page cover" for="page-1"></label>
                         <input type="radio" name="page" id="page-3" />
                         <label class="page" for="page-5">
-                            <img class="bookcovershow"  src="/images/AMAREPHARMACON-CORRIGIDO-1.svg" alt="">
+                            <img class="bookcovershow"  src="images/AMAREPHARMACON-CORRIGIDO-1.svg" alt="">
                         </label>
                         <label class="page" for="page-3">
-                            <img class="bookcovershow"  src="/images/AMAREPHARMACON-CORRIGIDO-2.svg" alt="">
+                            <img class="bookcovershow"  src="images/AMAREPHARMACON-CORRIGIDO-2.svg" alt="">
                         </label>
                         <input type="radio" name="page" id="page-5" />
                         <label class="page" for="page-7">
-                            <img class="bookcovershow"  src="/images/AMAREPHARMACON-CORRIGIDO-3.svg" alt="">
+                            <img class="bookcovershow"  src="images/AMAREPHARMACON-CORRIGIDO-3.svg" alt="">
                         </label>
                         <label class="page" for="page-5">
-                            <img class="bookcovershow"  src="/images/AMAREPHARMACON-CORRIGIDO-4.svg" alt="">
+                            <img class="bookcovershow"  src="images/AMAREPHARMACON-CORRIGIDO-4.svg" alt="">
                         </label>
                         <input type="radio" name="page" id="page-7" />
                         <label class="page" for="page-9">
-                            <img class="bookcovershow"  src="/images/AMAREPHARMACON-CORRIGIDO-5.svg" alt="">
+                            <img class="bookcovershow"  src="images/AMAREPHARMACON-CORRIGIDO-5.svg" alt="">
                         </label>
                         <label class="page" for="page-7">
-                            <img class="bookcovershow"  src="/images/AMAREPHARMACON-CORRIGIDO-6.svg" alt="">
+                            <img class="bookcovershow"  src="images/AMAREPHARMACON-CORRIGIDO-6.svg" alt="">
                         </label>
                         <input type="radio" name="page" id="page-9" />
                         <label class="page cover" for="page-11"></label>
