--- a/Segredo_Desperto.html
+++ b/Segredo_Desperto.html
@@ -77,11 +77,11 @@
                            
                              <div class="contgallery">
                                <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
-                               <img class ="img-booksshow"src="images/pharmacy-3377670.jpg" alt="">
-                               <img class ="img-booksshow"src="images/pharmacy-3377670.jpg" alt="">
-                               <img class ="img-booksshow"src="images/pharmacy-3377670.jpg" alt="">
-                               <img class ="img-booksshow"src="images/pharmacy-3377670.jpg" alt="">
-                               <img class ="img-booksshow"src="images/pharmacy-3377670.jpg" alt="">
+                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
+                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
+                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
+                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
+                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
                              </div>
                         </div>
                            <h1  class="headline-sinopse"  id="sinopse" >Sinópse</h1>
