--- a/Segredo_Desperto.html
+++ b/Segredo_Desperto.html
@@ -76,12 +76,12 @@
                             <h1  class="headline-galery  animate-this" >Galeria</h1>
                            
                              <div class="contgallery">
-                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
-                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
-                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
-                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
-                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
-                               <img class ="img-booksshow"src="images/Book_segredo_1.jpg" alt="">
+                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
+                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
+                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
+                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
+                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
+                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
                              </div>
                         </div>
                            <h1  class="headline-sinopse"  id="sinopse" >Sinópse</h1>
@@ -384,10 +384,10 @@
 
 
 
-<script  src="Components/transition.js"></script>
-<script   src="Components/scroll.js"></script>
-<script   src="Components/Buttons.js"></script>
-<script   src="Components/line.js"></script>
-<script   src="Components/textshow.js"></script>
+<script  src="Components/transition.js" defer></script>
+<script   src="Components/scroll.js" defer></script>
+<script   src="Components/Buttons.js" defer></script>
+<script   src="Components/line.js" defer></script>
+<script   src="Components/textshow.js" defer></script>
 
 </html>
