--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
 
  
-<script   src="Components/transition.js"></script>
-<script   src="Components/scroll.js"></script>
-<script   src="Components/Buttons.js"></script>
-<script   src="Components/line.js"></script>
-<script   src="Components/textshow.js"></script>
+<script   src="Components/transition.js" defer></script>
+<script   src="Components/scroll.js" defer></script>
+<script   src="Components/Buttons.js" defer></script>
+<script   src="Components/line.js" defer></script>
+<script   src="Components/textshow.js" defer></script>
 
 </html>
