iproved_image_link

--- a/Segredo_Desperto.html
+++ b/Segredo_Desperto.html
@@ -138,7 +138,7 @@
                             </div>    
                                     
                             <div>
-                                <img class="img-aut" src="images/sky-tree-2418287.jpg" alt="">
+                                <img class="img-aut" src="https://i.postimg.cc/v8PX3S2R/sky-tree-2418287.jpg" alt="">
                             </div>
 
                         </div>
