--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <img  class="back-img"  src="https://www.worldhistory.org/uploads/images/12758.jpg" alt="">
                         <img  class="back-img"  src="https://upload.wikimedia.org/wikipedia/commons/c/c8/View_of_Porto_from_View_of_Porto_from_Vila_Nova_de_Gaia.jpg" alt="">
                         <img  class="back-img"  src="images/pharmacy-3377670.jpg" alt="">
-                        <img class="back-img" src="images/sky-tree-2418287.jpg" alt="">
+                        <img class="back-img" src="https://i.postimg.cc/v8PX3S2R/sky-tree-2418287.jpg" alt="">
 
                         <div class="top ">
                             <img  class= "Logo animate-this" src="https://i.postimg.cc/pdtc0Zgj/LOGO-NOGUEIRA.png" alt="LOGO-NOGUEIRA" >
