--- a/Segredo_Desperto.html
+++ b/Segredo_Desperto.html
@@ -76,12 +76,12 @@
                             <h1  class="headline-galery  animate-this" >Galeria</h1>
                            
                              <div class="contgallery">
-                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
-                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
-                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
-                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
-                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
-                                <img class="img-booksshow" src="images/Book_segredo_1.jpg" alt="" loading="lazy">
+                                <img class="img-booksshow" src="https://i.postimg.cc/2yfqwmpd/Book-segredo-1.jpg" alt="" loading="lazy">
+                                <img class="img-booksshow" src="https://i.postimg.cc/2yfqwmpd/Book-segredo-1.jpg" alt="" loading="lazy">
+                                <img class="img-booksshow" src="https://i.postimg.cc/2yfqwmpd/Book-segredo-1.jpg" alt="" loading="lazy">
+                                <img class="img-booksshow" src="https://i.postimg.cc/2yfqwmpd/Book-segredo-1.jpg" alt="" loading="lazy">
+                                <img class="img-booksshow" src="https://i.postimg.cc/2yfqwmpd/Book-segredo-1.jpg" alt="" loading="lazy">
+                                <img class="img-booksshow" src="https://i.postimg.cc/2yfqwmpd/Book-segredo-1.jpg" alt="" loading="lazy">
                              </div>
                         </div>
                            <h1  class="headline-sinopse"  id="sinopse" >Sinópse</h1>
