adapted_semi_final_proto

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                     <h3>
                                         Segredo Desperto
                                     </h3>
-                                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                                    <p>Segredo Desperto é uma viagem intensa pelos labirintos da mente humana, onde segredos escondidos e verdades inquietantes se entrelaçam, revelando que a linha entre a realidade e a ilusão pode ser mais tênue do que imaginamos.</p>
                                     <a class="button-other" href="Segredo_Desperto.html" >
                                         <div class="icon_cont">
                                         <p class="icon_plus">+</p>
