--- a/Segredo_Desperto.html
+++ b/Segredo_Desperto.html
@@ -357,6 +357,7 @@
 
 <script  src="https://unpkg.com/@barba/core"></script>
 <script  src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
+<script src="https://unpkg.com/@barba/prefetch"></script>
 <script  src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
