--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <span class="loader"></span>
         </div>
     </div>
-            <main  data-barba="container" data-barba-namespace="Main">
+            <main  data-barba="container" data-barba-namespace="Main" class="Wrapper1">
   
-                <div class="container-Main" >
+                <div class="container-Main"  >
 
                   
                         <img class="back-img" src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Amazonia.jpg" alt="">
