--- a/Gémea_Rejeitada.html
+++ b/Gémea_Rejeitada.html
@@ -288,7 +288,7 @@
         
 
                                 <button class="submit-btn" type="submit" >
-                                    <span>Submit</span>
+                                    <span>Enviar</span>
                                     <div class="success">
                                     <svg xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"  viewBox="0 0 29.756 29.756" style="enable-background:new 0 0 29.756 29.756;" xml:space="preserve">
                                       
